--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
   <!-- Favorite icon -->
   <!-- <link rel="shortcut icon" href="#.ico"> -->
-    <!-- Styles -->
+  <!-- Styles -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
   <link href="css/reset.css" rel="stylesheet" type="text/css">
   <link href="css/main.css" rel="stylesheet" type="text/css">
 
@@ -29,9 +31,8 @@
      </form>
     </div>
 
+  <div type="button" id="clear" class="clear" onclick="cleanComments()">CLEAR</div>
+
   <section id="comments" class="comments"></section>
 
 <script src="js/main.js"></script>
-
-</body>
-</html>
